includedir = $(prefix)/include/librequiem

include_HEADERS = common.h			\
		  daemonize.h			\
		  idmef.h			\
		  idmef-additional-data.h	\
		  idmef-class.h			\
		  idmef-criteria.h		\
		  idmef-criterion-value.h	\
		  idmef-data.h			\
		  idmef-message-helpers.h	\
		  idmef-message-id.h		\
		  idmef-message-read.h		\
		  idmef-message-print.h		\
		  idmef-message-write.h		\
		  idmef-path.h			\
		  idmef-time.h			\
		  idmef-tree-data.h		\
		  idmef-tree-wrap.h		\
		  idmef-value.h			\
		  idmef-value-type.h		\
		  requiem.h			\
		  requiem-async.h		\
		  requiem-extract.h		\
		  requiem-hash.h		\
		  requiem-linked-object.h	\
		  requiem-list.h		\
		  requiem-log.h			\
		  requiem-client.h		\
		  requiem-client-profile.h	\
		  requiem-connection.h		\
		  requiem-connection-pool.h	\
		  requiem-failover.h		\
		  requiem-ident.h		\
		  requiem-io.h			\
		  requiem-msg.h			\
		  requiem-msgbuf.h		\
		  requiem-message-id.h		\
		  requiem-option.h		\
		  requiem-option-wide.h		\
		  requiem-plugin.h		\
		  requiem-string.h		\
		  requiem-timer.h		\
		  requiem-thread.h

nodist_include_HEADERS = requiem.h requiem-inttypes.h

noinst_HEADERS = config-engine.h libmissing.h idmef-tree-data.h ntp.h tls-auth.h tls-util.h variable.h

-include $(top_srcdir)/git.mk
