includedir = $(prefix)/include/librequiem

include_HEADERS = \
	requiem-error.hxx \
	idmef.hxx \
	idmef-criteria.hxx \
	idmef-path.hxx \
	idmef-time.hxx \
	idmef-value.hxx \
	requiem.hxx \
	requiem-client.hxx \
	requiem-client-easy.hxx \
	requiem-client-profile.hxx \
	requiem-connection.hxx	\
	requiem-connection-pool.hxx \
	requiem-log.hxx


-include $(top_srcdir)/git.mk
